Fix alignment

--- a/app/partOne/04-shoppingCart/ShoppingCart.module.css
+++ b/app/partOne/04-shoppingCart/ShoppingCart.module.css
@@ -2,6 +2,7 @@
 .gridContainer > div {
   display: grid;
   grid-template-columns: 3fr 1fr 1fr;
+  text-align: center;
 }
 
 .tableHeading {
